# potpourri

./: .gitignore  README.md
agda/: linear.agda-lib
agda/circuitt/: March18.agda
agda/cong/: cong.agdalib
agda/coverage/: Coverage-fail.agda  Coverage-fail2.agda  Coverage-fail3.agda  Coverage.agda
agda/cubical/: list0.agda  potpourri-cubical.agda-lib
agda/duality/: duality.agda-lib
agda/firstorder-env/: firstorder-env.agda-lib  generic-syntax.agda
agda/itsy/: bitsy.agda  itsy.agda  itsy.agda-lib
agda/lib/: Context.agda  Fin.agda  Function.agda  Maybe.agda  Nullary.agda
agda/linear/: Completeness.agda  Context.agda  Examples.agda  ILL.agda  Language.agda  Mix.agda  Model.agda  README.agda  RawIso.agda  Scope.agda  Soundness.agda  Type.agda  Typecheck.agda  Typing.agda  Usage.agda  Utils.agda
agda/linear!/: Language.agda
agda/lps/: Equivalence.agda  Examples.agda  IMLL.agda  IMLLArr.agda  Linearity.agda  ProofSearch.agda  Tactics.agda  nad.diff
agda/models/: models.agda
agda/monoid/: Correctness.agda  Monoid.agda  Normalise.agda  Utils.agda
agda/parsing-printing/: Delay.agda
agda/poc/: AccProp.agda  AllLambdas.agda  AsList.agda  Assumption.agda  BN.agda  Bidirectional.agda  Box.agda  CPS-Termination.agda  CanonicalStructures.agda  DescK.agda  DescSize.agda  FiniteMap.agda  InfixParser.agda  Iterator.agda  LiftA.agda  LinearDec.agda  ListSpec.agda  MixfixParser.agda  MuTypes.agda  NonRegParDesc.agda  ParserCombinator.agda  PigeonHole.agda  REWRITE-OTT.agda  ScopedIntro.agda  (+24 more)
idris/serialised/src/haskell/: Desc.hs  serialised.cabal
rust/: cat.rs
(+756 files in other folders)
