cabal-version:      2.4
name:               serialised
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Guillaume Allais
maintainer:         guillaume.allais@ens-lyon.org

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library

    -- Modules included in this executable, other than Main.
    exposed-modules: Desc


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.13.0.0
                    , bytestring ^>= 0.11
    hs-source-dirs:   .
    default-language: Haskell2010
